tests/textual/error/remainderInteger-unit-wrong-1st-argument.uplc
(program 1.0.0[[(builtin remainderInteger)(con unit ())](con integer 10)])